fixed sidebar vertical align

--- a/scss/theme/_blog.scss
+++ b/scss/theme/_blog.scss
@@ -152,9 +152,9 @@ ul.pagination li {
       margin: 0;
     }
 
-    * {
-      vertical-align: bottom;
-    }
+    // * {
+    //   vertical-align: bottom;
+    // }
 
     :last-child {
       margin-bottom: 0;
